--- a/assets/sass/modules/pre-orders/admin/preview.scss
+++ b/assets/sass/modules/pre-orders/admin/preview.scss
@@ -12,7 +12,6 @@
 
 .merchant-module-page-setting-field-info_block {
 	margin-bottom: 0;
-	background: red;
 }
 
 // Canvas.
