--- a/assets/sass/modules/product-labels/admin/preview.scss
+++ b/assets/sass/modules/product-labels/admin/preview.scss
@@ -4,6 +4,10 @@
  *
  */
 
+.merchant-flexible-content .layout .merchant-upload-wrapper {
+	margin-bottom: 0;
+}
+
 .merchant-module-page-preview-browser-inner {
 	display: flex;
 	flex-grow: 0;
